[package]
name = "pie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pie"
path = "lib/pie.rs"
bench = false

[[bin]]
name = "repl"
path = "repl/main.rs"
bench = false

[[bin]]
name = "pie"
path = "src/main.rs"
bench = false

[[bench]]
name = "bench"
harness = false
path = "bench/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "unicode", "env"] }
miette = { version = "5.10.0", features = ["fancy", "supports-unicode", "textwrap"] }
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
thiserror = "1.0.51"
tree-sitter = "0.20.10"
tree-sitter-pie = { path = "tree-sitter-pie" }
xdg = "2.5.2"

[dev-dependencies]
criterion = "0.5.1"
